# ask-man

./: .gitignore  Cargo.toml  README.md  askman.html  explain.txt  index.html  prompt.txt
.github/workflows/: release.yml
src/: main.rs  openai.rs
