[package]
name = "ask-man"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
